--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@any-u/utils",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "license": "MIT",
   "author": "any-u",
   "main": "dist/index.cjs",
@@ -8,6 +8,7 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     }
