--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "dist"
   ],
   "scripts": {
-    "dev": "esno src/index.ts",
-    "dev:watch": "esno watch src/index.ts",
-    "build": "esno scripts/build.ts",
+    "dev": "tsx src/index.ts",
+    "dev:watch": "tsx watch src/index.ts",
+    "build": "tsx scripts/build.ts",
     "build:rollup": "cross-env NODE_OPTIONS=\"--max-old-space-size=6144\" rollup -c",
     "clean": "rimraf dist",
     "update": "tsx scripts/update.ts",
     "publish:ci": "tsx scripts/publish.ts",
-    "watch": "esno scripts/build.ts --watch",
+    "watch": "tsx scripts/build.ts --watch",
     "test": "vitest"
   },
   "devDependencies": {
@@ -35,13 +35,13 @@
     "cross-env": "^7.0.3",
     "esbuild": "^0.21.4",
     "esbuild-register": "^3.5.0",
-    "esno": "^4.7.0",
     "fs-extra": "^11.2.0",
     "rimraf": "^5.0.7",
     "rollup": "^4.18.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
     "tslib": "^2.6.3",
+    "tsx": "^4.15.6",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
   }
