feat: 调整部分功能
1. 新增runOnce 函数
2. 移除 request 函数

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@any-u/utils",
-  "version": "0.0.3",
+  "version": "0.0.3-beta.2",
   "license": "MIT",
   "author": "any-u",
   "main": "dist/index.cjs",
